# IC_WC_HW3

./: .FWLogger.o.cmd  .FWModule.o.cmd  .FWPacketMatcher.o.cmd  .FWPacketParser.o.cmd  .FWRuleManager.o.cmd  .firewall.ko.cmd  .firewall.mod.o.cmd  .firewall.o.cmd  CMakeLists.txt  FWConnectionManager.c  FWConnectionManager.h  FWLoger.c  FWLoger.h  FWLogger.c  FWLogger.h  FWModule.c  FWNetworkFilter.c  FWNetworkFilter.h  FWPacketMatcher.c  FWPacketMatcher.h  FWPacketParser.c  FWPacketParser.h  FWProxyHelper.c  FWProxyHelper.h  FWRoleManager.c  FWRoleManager.h  FWRuleManager.c  FWRuleManager.h  Makefile  ProxyHelper.c  ProxyHelper.h  README.md  firewall.ko  firewall.mod.c  fw.h  main.py  modules.order
.tmp_versions/: firewall.mod
common/: API.py  client.py  utils.py
ftp/: API.py  client.py  ftp_mitm.py  server.py  sever.py  utils.py
http/: API.py  client.py  http_client.py  http_mitm.py  mitm_trial.py  server.py  utils.py
mitm/: IPS_mitm.py  ftp_mitm.py  http_mitm.py  smtp_mitm.py
mitm/common/: API.py  interseptor.py  utils.py
module/: FWConnectionManager.c  FWConnectionManager.h  FWLogger.c  FWLogger.h  FWModule.c  FWPacketMatcher.c  FWPacketMatcher.h  FWPacketParser.c  FWPacketParser.h  FWProxyHelper.c  FWProxyHelper.h  FWRuleManager.c  FWRuleManager.h  fw.h  rules  zookepper_only_rules
user/: allow_all_rules
